# RayTracing

./: .gitignore  CMakeLists.txt  Raytracing.sln  Raytracing.vcxproj  Raytracing.vcxproj.filters
.cache/clangd/index/: Camera.cpp.A234659AADCBDE23.idx  Camera.h.D0B3FF90ECFF8C8E.idx  Framebuffer.cpp.3C282DEF3E30A4AF.idx  Framebuffer.h.E5B8E53CC4F18984.idx  Scene.h.8F41525C0E3AF8A4.idx  Shader.cpp.B1EC3DBAE7BA2689.idx  Shader.h.E348774B8B49C46B.idx  Texture.cpp.0320E5EE2C353533.idx  Texture.h.3966BC7ADD1AEB7B.idx  VertexBuffer.cpp.9A66BEADB3BDA4D4.idx  VertexBuffer.h.134EC437EBB1D710.idx  _fixes.hpp.220E6A468375D578.idx  _vectorize.hpp.D9500BC29B6ABC0A.idx  common.hpp.4AD1F0F50C140304.idx  component_wise.hpp.77071316DF8F2CEC.idx  component_wise.inl.E1A3C16A26A0F3FC.idx  compute_common.hpp.7E90BD8E2F21B33B.idx  compute_vector_relational.hpp.37C1B4141697D98D.idx  constants.hpp.0D351EED8E4579F1.idx  constants.inl.4351AF2BE401253E.idx  epsilon.hpp.1D45EC65F3C9D610.idx  epsilon.inl.911565BDF69C33A2.idx  exponential.hpp.2949A92C32D8F806.idx  func_common.inl.38050D48D8E2E976.idx  func_exponential.inl.55986C4CD84EF8E4.idx  func_geometric.inl.F28A81A06EDAD781.idx  func_integer.inl.F3F538065215C1E1.idx  func_matrix.inl.DEC86337E06DFE9E.idx  func_packing.inl.B006A75064C913B4.idx  func_trigonometric.inl.44ECF164BFD24E6D.idx  (+179 more)
res/shaders/: screen.comp  screen.frag  screen.vert  screenout.frag
src/: main.cpp
src/Application/: Camera.cpp  Camera.h  Scene.h
src/OpenGL/: FrameBuffer.cpp  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
